Sorted some layout issues with the theme

--- a/system/cms/themes/sites/css/workless/application.css
+++ b/system/cms/themes/sites/css/workless/application.css
@@ -34,6 +34,11 @@ body.login ul
 	list-style: none;
 }
 
+div.settings li
+{
+	list-style: none;
+}
+
 #login 
 {
 	background: #ffffff;
@@ -280,17 +285,16 @@ nav#primary select
  */
 #content-body 
 {
-	top: 150px;
-	position: relative;
+	margin-top: 150px;
 }
 
 #content
 {
 	background: #ffffff;
 	width: 100%;
-	min-height: 100px;
+	min-height: 300px;
 	margin: 0;
-	padding: 16px;
+	padding: 16px 16px 50px 16px;
 	float: left;
 	border-bottom-right-radius: 5px;
   	-moz-border-radius-bottomright: 5px; 	
@@ -364,10 +368,10 @@ footer
 	color: #cccccc;
 	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.8);
 	font-size: 12px;
-	height: 25px;
-	padding: 35px 0 25px 0;
+	height: 0;
+	padding: 15px 0 25px 0;
 	border-top: 1px solid #ffffff;
-	position: absolute;
+	position: fixed;
 	bottom: 0;
 }
 
